--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
       <div class="container-fluid">
         <section class="p-4">
           <h2>Home</h2>
-          <p>Esta é a seção Home</p>
+          <p>Esta é a seção Home.</p>
         </section>
         <section class="p-4">
           <h2>Sobre</h2>
-          <p>Esta é a seção sobre</p>
+          <p>Esta é a seção sobre.</p>
         </section>
         <section class="p-4">
           <h2>Contato</h2>
-          <p>ESta é a seção contato</p>
+          <p>ESta é a seção contato.</p>
         </section>
       </div>
     </main>
